--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+:root {
+	--blue: #305b90;
+}
+.container {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.about-me {
+	width: 40%;
+	height: 80%;
+	border: 1px solid;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+@media only screen and (max-width: 900px) {
+	.about-me {
+		width: 60%;
+		height: 90%;
+	}
+	body {
+		font-size: 14px;
+	}
+}
+@media only screen and (max-width: 510px) {
+	.about-me {
+		width: 80%;
+		height: 96%;
+	}
+	body {
+		font-size: 12px;
+	}
+}
+.pic {
+	display: flex;
+	justify-content: center;
+}
+.pic > img {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	object-fit: cover;
+	object-position: -20% 0;
+	transform: translateY(-5vw);
+	filter: drop-shadow(0 0 0.75rem var(--blue));
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.designation {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.designation h2 {
+	font-size: 1.5rem;
+	text-transform: uppercase;
 }
 
-.App-link {
-  color: #61dafb;
+.designation h3 {
+	font-size: 1.2rem;
+	color: rgba(12, 12, 12, 0.6);
+}
+.contact {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 70%;
+	margin: 1rem;
+}
+.button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0.5rem;
+	font-size: 1.6rem;
+	font-weight: 600;
+	color: #fff;
+	background: var(--blue);
+	border: 1px solid var(--blue);
+	border-radius: 0.3rem;
+	cursor: pointer;
+	width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:hover {
+	background: var(--blue);
+	opacity: 0.9;
+}
+
+.about {
+	width: 70%;
+	padding: 0.5rem;
+}
+
+.about > p {
+	margin-top: 0.4rem;
+	line-height: 1.2rem;
+}
+.work {
+	margin: 1rem;
+	display: grid;
+	place-items: center;
+}
+.work > p {
+	font-size: 1rem;
+	text-transform: uppercase;
+	font-weight: 200;
+	letter-spacing: 0.125rem;
+	color: #999;
+	margin-bottom: 0.3rem;
+}
+
+.work h6 {
+	font-size: 1.3rem;
+	font-weight: 500;
 }
