--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
 	flex-direction: column;
 	box-shadow: -2px -2px 2px 2px rgba(153, 153, 153, 0.551),
 		2px 2px 2px 2px rgba(153, 153, 153, 0.551);
+	border-radius: 1rem;
 }
 
 .designation {
@@ -65,7 +66,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 0.5rem;
+	padding: 0.3rem;
 	font-size: 1.6rem;
 	font-weight: 600;
 	color: #fff;
@@ -73,7 +74,7 @@
 	border: 1px solid var(--blue);
 	border-radius: 0.3rem;
 	cursor: pointer;
-	width: 100%;
+	width: 70%;
 }
 a {
 	text-decoration: none;
@@ -91,7 +92,7 @@ a {
 
 .about > p {
 	margin-top: 0.4rem;
-	line-height: 1.2rem;
+	line-height: 1.8rem;
 }
 .work {
 	margin: 1rem;
